# k3k-rs

./: .gitignore  Cargo.toml  README.md
examples/: cluster_create.rs  cluster_full.rs  cluster_list.rs  logs_agent.rs  logs_server.rs  vcp_create.rs
k3k-rs/: Cargo.toml
k3k_rs/: Cargo.toml
k3k_rs/examples/: cluster_create.rs  cluster_delete.rs  cluster_full.rs  cluster_list.rs  kubeconfig_get.rs
k3k_rs/src/: cluster_crd.rs  lib.rs
k3k_rs/src/cluster/: cluster_crd.rs  cluster_fn.rs
k3k_rs/src/kubeconfig/: kubeconfig_fn.rs  mod.rs
k3k_rs/src/namespace/: namespace_fn.rs
k3k_rs/src/virtualclusterpolicy/: mod.rs  virtualclusterpolicy_crd.rs  virtualclusterpolicy_fn.rs
src/: lib.rs
src/cluster/: cluster_crd.rs  cluster_fn.rs  extra_specs.rs  mod.rs
src/ingress/: ingress_fn.rs  mod.rs
src/logs/: logs_fn.rs  mod.rs
src/namespace/: mod.rs  namespace_fn.rs
src/virtualclusterpolicy/: virtualclusterpolicy_crd.rs  virtualclusterpolicy_fn.rs
